# cookiecutter-django-ld

./: README.md  cookiecutter.json  pyproject.toml
django-ossature-ld/: README.md  pyproject.toml
django-ossature-ld/apps/accounts/: utils.py  validators.py
django-ossature-ld/apps/accounts/api/: urls.py
django-ossature-ld/apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_first_name_and_more.py  0003_alter_customerprofile_company_name.py  0004_alter_supplierprofile_company_name.py  0005_rename_modified_customerprofile_updated_and_more.py  0006_alter_customuser_options_alter_customuser_email_and_more.py
django-ossature-ld/apps/accounts/models/: __init__.py  user.py
django-ossature-ld/apps/contacts/: apps.py
django-ossature-ld/apps/contacts/admin/: __init__.py
django-ossature-ld/apps/contacts/api/: ping.py  urls.py
django-ossature-ld/apps/contacts/migrations/: 0001_initial.py
django-ossature-ld/apps/contacts/models/: customer.py  supplier.py
django-ossature-ld/apps/contacts/tests/: test_api_customer_address.py  test_models.py
django-ossature-ld/apps/pages/: admin.py  forms.py  models.py  sitemaps.py  urls.py  views.py
django-ossature-ld/apps/pages/migrations/: 0001_initial.py  0002_faqquestionanswer.py  (+2 more)
django-ossature-ld/config/: urls.py
django-ossature-ld/config/settings/: __init__.py  apps.py  auth.py  base.py  cache.py  database.py  database_dev.py  debug_toolbar.py  drf.py  email.py  i18n.py  logging.py  middleware.py  security.py  static.py  templates.py
django-ossature-ld/config/templates/: base.html
(+80 files in other folders)
